Correct image distortion occurring at breakpoint
Applied object-fit:contain to image so that it scales correctly at
smaller desktop window sizes.

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   border-top-right-radius: inherit;
   max-width:100%;
   max-height:100%;
+  object-fit:contain
 }
 
 .product-details {
@@ -101,7 +102,7 @@ h1, .sale-price {
 @media (min-width: 680px) {
   .container {
     display: flex;
-    max-width: min(800px,100vw);
+    max-width: 800px;
   }
   .container>* {
     flex: 1;
